--- a/src/app/components/calculation-tools/bmi-calculator/bmi-calculator.component.html
+++ b/src/app/components/calculation-tools/bmi-calculator/bmi-calculator.component.html
@@ -1,9 +1,7 @@
 <ion-content class="ion-padding">
   <ion-row class="speedometer-container">
-    <ion-row class="speedometer">
-      <ion-text class="bmi-value">{{ bmi.toFixed(1) }}</ion-text>
-    </ion-row>
-    <ion-text class="bmi-health" [ngClass]="healthRangeClass">{{ healthRangeText }}</ion-text>
+    <speedometer class="speedometer" [speedText]="speedText" [speed]="healthContext?.meter || 0"></speedometer>
+    <ion-text *ngIf="healthContext" class="bmi-health" [ngClass]="healthContext.cssClass">{{ healthContext.title }}</ion-text>
   </ion-row>
   <ion-item>
     <ion-label position="floating">Height (cm)</ion-label>
